# rustowl

./: .gitignore  .valgrind-suppressions  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml  rustowl.el
.chglog/: CHANGELOG.tpl.md
.github/: dependabot.yml
.github/actions/pnpm-version/: action.yml
.github/workflows/: build.yaml  changelog.yml  check.yaml  checks.yml  commitlint.yml  docker-checks.yml  neovim-checks.yml  release.yaml  security.yml  stale.yml  validate-pr-title.yml
aur/: PKGBUILD  PKGBUILD-GIT
benches/: rustowl_bench_simple.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  build.md  drmemory-setup.md  neovim-configuration.md  perf-tests.md  usage.md
ftplugin/: rust.lua
nvim-tests/: minimal_init.lua  test_config.lua  test_ftplugin.lua  test_highlight.lua  test_lsp.lua  test_rustowl.lua  test_show_on_hover.lua
perf-tests/: perf-tests.sh
perf-tests/dummy-package/: Cargo.toml  README.md
perf-tests/dummy-package/benches/: bench_target.rs
perf-tests/dummy-package/examples/: example_target.rs
perf-tests/dummy-package/src/: lib.rs  main.rs
scripts/: .commitlintrc.json  README.md  bench.sh  bump.sh  dev-checks.sh  package.json  pnpm-lock.yaml  run_nvim_tests.sh  security.sh  setup-drmemory-windows.ps1  size-check.sh
src/: cache.rs  cli.rs  lib.rs  lsp.rs  miri_tests.rs  models.rs  shells.rs  toolchain.rs  utils.rs
src/lsp/: analyze.rs  backend.rs  decoration.rs  progress.rs
vscode/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
vscode/src/: bootstrap.ts  extension.ts
