[package]
name = "rustowl"
version = "0.3.4"
edition = "2024"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Visualize Ownership and Lifetimes in Rust"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"
keywords = ["visualization", "ownership", "lifetime", "lsp"]
categories = ["development-tools", "visualization"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "process", "fs"] }
tower-lsp = "0.20.0"
process_alive = "0.1.1"
cargo_metadata = "0.20.0"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5.40", features = ["cargo", "derive"] }
tar = "0.4.44"
flate2 = "1.1.2"
reqwest = { version = "0.12.19", default-features = false, features = ["http2", "rustls-tls-native-roots"] }
clap_complete_nushell = "4.5.7"
clap_complete = "4.5.54"
zip = "4.0.0"

[build-dependencies]
clap_complete_nushell = "4.5.7"
clap_complete = "4.5.54"
clap_mangen = "0.2.26"
clap = { version = "4.5.40", features = ["derive"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
libc = "0.2.169"
tikv-jemalloc-sys = "0.6"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.release.package."*"]
strip = "symbols"
opt-level = 3

[profile.arm-windows-release]
inherits = "release"
lto = "off"

[profile.security]
inherits = "dev"
debug = true
debug-assertions = true
overflow-checks = true
opt-level = 1
strip = "none"

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rustowl-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
