[package]
name = "rustowl"
version = "0.3.4"
edition = "2024"
authors = ["cordx56 <cordx56@cordx.cx>"]
description = "Visualize Ownership and Lifetimes in Rust"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"
keywords = ["visualization", "ownership", "lifetime", "lsp"]
categories = ["development-tools", "visualization"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simple_logger = { version = "5", features = ["stderr"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-std", "io-util", "process", "fs"] }
tower-lsp = "0.20"
process_alive = "0.1"
cargo_metadata = "0.21"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["cargo", "derive"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls-native-roots"] }
clap_complete_nushell = "4"
clap_complete = "4"
tar = "0.4.44"
tempfile = "3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1", default-features = false, features = ['extended'] }
libmimalloc-sys = { version = "0.1", default-features = false, features = ['extended'] }
libc = "0.2"

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1", default-features = false, features = ['extended', 'override'] }
libmimalloc-sys = { version = "0.1", default-features = false, features = ['extended', 'override'] }

[build-dependencies]
clap_complete_nushell = "4"
clap_complete = "4"
clap_mangen = "0.2"
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "rustowl_bench_simple"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.release.package."*"]
strip = "symbols"
opt-level = 3

[profile.arm-windows-release]
inherits = "release"
lto = "off"

[profile.security]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
opt-level = 1
strip = "none"

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rustowl-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
